// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provider initialize 1`] = `
<div>
  this is foo
</div>
`;

exports[`provider with auto-injected dependencies 1`] = `
<div>
  this is foo
</div>
`;

exports[`provider with use 1`] = `
<div>
  this is foo
</div>
`;

exports[`provider with use 2`] = `
<div>
  bbb
</div>
`;
